
Release 3.6.0 (???)
~~~~~~~~~~~~~~~~~~~

Ubuntu 10.10 and Fedora 14 support
gcc-4.5 and glibc-2.12
DHAT
SSE4
Power6
Scalability improvements (code cache)
--fullpath-after
--require-text-symbol
Matching Valkyrie support (for Mc, Hg, Pc)
Hg annotation improvements
More reliable stack unwinding on amd64-linux

Punted but under consideration for 3.7:
Support for code compiled by LLVM-2.8
Support for adding symbols for JIT generated code

Improvements:
- XXX: ARM support
- XXX: Mac OS 10.6 support (32 and 64 bit)
- XXX: Much faster startup on Mac OS 10.5 for 64-bit programs.

- Valgrind runs much faster when the --smc-check=all option is given.

- Cachegrind has a new processing script, cg_diff, which finds the
  difference between two profiles.  It's very useful for evaluating the
  performance effects of a change in a program.
  
  Related to this change, the meaning of cg_annotate's (rarely-used)
  --threshold option has changed; this is unlikely to affect many people, if
  you do use it please see the user manual for details.

- Callgrind now can do branch prediction simulation, similar to Cachegrind.
  In addition, it optionally can count the number of executed global bus events.
  Both can be used for a better approximation of a "Cycle Estimation" as
  derived event (you need to update the event formula in KCachegrind yourself).

- Cachegrind and Callgrind now refer to the LL (last-level) cache rather
  than the L2 cache.  This is to accommodate machines with three levels of
  caches -- if Cachegrind/Callgrind auto-detects the cache configuration of
  such a machine it will run the simulation as if the L2 cache isn't
  present.  This means the results are less likely to match the true result
  for the machine, but Cachegrind/Callgrind's results are already only
  approximate, and should not be considered authoritative.  The results are
  still useful for giving a general idea about a program's locality.
