@@ -74,7 +74,7 @@ usage: valgrind [options] prog-and-args
 
   Nulgrind is Copyright (C) 2002-2010, and GNU GPL'd, by Nicholas Nethercote.
   Valgrind is Copyright (C) 2000-2010, and GNU GPL'd, by Julian Seward et al.
-  LibVEX is Copyright (C) 2004-2010, and GNU GPL'd, by OpenWorks LLP.
+  LibVEX is Copyright (C) 2004-2010, and GNU GPL'd, by OpenWorks LLP et al.
 
   Bug reports, feedback, admiration, abuse, etc, to: www.valgrind.org.
 
